changes h2 background color

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week5</title>
 
-    <link rel="stylesheet" href="./styles/stylesheet.css">
+    <link rel="stylesheet" href="styles/stylesheet.css" rel="stylesheet">
 </head>
 
 <body>
     <h1 class="capital">Capitals</h1>
-    <h2 class="capital">London</h2>
+    <h2 class="capital" id="london">London</h2>
     <p>London is capital of England.</p>
-    <h2 class="capital">Paris</h2>
+    <h2 class="capital paris">Paris</h2>
     <p>Paris is capital of France.</p>
 </body>
 
