box model activity

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2 class="capital paris">Paris</h2>
     <p>Paris is capital of France.</p> -->
 
-    <h1 id="top">Capitals</h1>
+    <!-- <h1 id="top">Capitals</h1>
     <p>Jump to <a href="#ottawa">Ottawa</a></p>
 
     <h2>London</h2>
@@ -34,8 +34,9 @@
     <h2 id="ottawa">Ottawa</h2>
     <p> Ottawa is capital of Canada.</p>
 
-    <p>Go to the <a href="#top">top</a></p>
+    <p>Go to the <a href="#top">top</a></p> -->
 
+    <p>The typical filler text is the <span>Lorem Ipsum</span>.</p>
 </body>
 
 </html>
