--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <p>Go to the <a href="#top">top</a></p> -->
 
-    <p>The typical filler text is the <span>Lorem Ipsum</span>.</p>
+    <p class="myp">The typical filler text is the <span class="myspan">Lorem Ipsum</span>.</p>
 </body>
 
 </html>
