--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Week5</title>
 
     <link rel="stylesheet" href="styles/stylesheet.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
